# eslib

./: .travis.yml  CMakeLists.txt  README.md
examples/: esl_config.h
source/: CMakeLists.txt  esl_heap.c  esl_heap.h  esl_internals.h
test/: CMakeLists.txt  test_esl_heap.c
